--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,9 @@
     justify-content: space-between;
     padding-left: 140px;
     padding-right: 140px;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .header a {
